--- a/Lexer/Lexer/Lexer.vcxproj.filters
+++ b/Lexer/Lexer/Lexer.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="TestOptimizer.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DFA.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -75,6 +78,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="TestOptimizer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DFA.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
