--- a/Lexer/Lexer.vcxproj.filters
+++ b/Lexer/Lexer.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Lexer.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Token.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DFA.cpp">
@@ -53,13 +56,7 @@
     <ClCompile Include="Regex.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="RegexOperator.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="Lexer.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
