--- a/Parser/Parser.vcxproj.filters
+++ b/Parser/Parser.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Parser.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="LR_1_Item.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Parser.cpp">
